--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://<username>.github.io/<repo>/"
+﻿baseURL = "https://QuangVinh2308.github.io/workshoptt/"
 title = "Auto Scaling with ML"
-theme = "ananke"
+theme = "hugo-book"
 languageCode = "en-us"
