--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-﻿baseURL = "https://QuangVinh2308.github.io/workshoptt/"
+baseURL = "https://QuangVinh2308.github.io/workshoptt/"
 title = "Auto Scaling with ML"
 theme = "hugo-book"
 languageCode = "en-us"
